# amms

./: .gitignore  Cargo.toml  DEVELOPMENT_LOG.md  README.md  github_ISSUE_TEMPLATE_bug_report.md  github_ISSUE_TEMPLATE_feature_request.md  github_workflows_ci.yml
crates/mmss-core/: Cargo.toml
crates/mmss-core/src/: lib.rs  structex_bridge.rs
crates/mmss-core/src/export/: arrow.rs  mod.rs
examples/: generate_data.rs
python/: pyproject.toml  requirements.txt
python/mmss_visualization/: __init__.py  models.py
src/: lib.rs
src/api/: data_io.rs  llm_gateway.rs
src/core/: emergence_logic.rs  eqgft_types.rs  error.rs  geometric_metrics.rs  geometric_quaternion_core.rs  semantic_task_processor.rs  types.rs
src/routes/: health.rs  llm.rs  metrics.rs  mod.rs  rules.rs  tasks.rs  visualization.rs
src/state/: mod.rs
src/visualization/: protocol.rs
src/web/: app.css  app.js  index.html
tools/vis/: plotter.py  requirements.txt
