[package]
name = "mmss"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
num-complex = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
arrow2 = "0.17"
rand = "0.8"
axum = "0.7"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
tower-http = "0.6.6"
dotenvy = "0.15.7"

[[example]]
name = "generate_data"
path = "examples/generate_data.rs"

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
