[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmss_visualization"
version = "0.1.0"
description = "Visualization tools for MMSS"
authors = [{name = "MMSS Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "pydantic",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mmss_visualization*"]
